# Markdown-viewer

./: DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  fix_build.sh  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx
src/components/FileBrowser/: FileBrowser.css  FileBrowser.tsx  FileTree.tsx
src/components/FileTree/: FileTree.css  FileTree.tsx
src/components/Icons/: Icons.tsx
src/components/StatusBar/: StatusBar.css  StatusBar.tsx
src/components/TabBar/: TabBar.css  TabBar.tsx
src/components/Viewers/: CodeEditor.css  CodeEditor.tsx  HtmlViewer.css  HtmlViewer.tsx  JsonViewer.css  JsonViewer.tsx  MarkdownViewer.css  MarkdownViewer.tsx  MermaidBlock.css  MermaidBlock.tsx
src/hooks/: useFile.ts  useRecentFiles.ts  useSessionPersistence.ts  useTabs.ts
src/styles/: globals.css
src/types/: index.ts
